-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.0
-
None
-
Qt 5.7 on Windows 10
-
37b714d3e09f839553e9d4a151b44b647e39c548
The RangeSlider value property does not take into account the from value when the stepSize is changed.
RangeSlider {
from: 10
to: 100
second.value: to
stepSize: 10
snapMode: RangeSlider.SnapAlways
first.onValueChanged: console.log("Value is", first.value)
}
Move the slider, the console will print
qml: Value is 10 qml: Value is 19 qml: Value is 28 qml: Value is 37 qml: Value is 46 qml: Value is 55 qml: Value is 64 qml: Value is 73 qml: Value is 82 qml: Value is 91 qml: Value is 100
rather than stubbornly increasing by the set stepSize of 10. If I change from to 0 this works as expected.
The snapMode does not affect this behavior.
- resulted in
-
QTBUG-55228 Dial's stepSize handling is broken
-
- Closed
-
For Gerrit Dashboard: QTBUG-55015 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
167514,2 | QQuickRangeSlider: fix snapPosition() | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |