QQuickRangeSlider: fix snapPosition()

The correct formula for calculating the "range" or "span" is to-from,
not from+(to-from), which is used in the formula for calculating value.

Task-number: QTBUG-55015
Change-Id: Ie30f7e86a10b606a59a171a4667772e446beaf39
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>